# brainscrawl

./: .gitignore  CMakeLists.txt  README.md
grammar/: grammar.md
include/: nonterminal_classification.hh
include/lexer/: token.hh  tokeniser.hh
include/lexer/lexer/: token.hh
include/parser/: modifier_wrapper.hh  parse_exception.hh  parser.hh  productions.hh
src/: main.cc
